Version Mobile correction css responsive missing the popular part

--- a/booki/css/style.css
+++ b/booki/css/style.css
@@ -426,6 +426,7 @@ input::placeholder {
         flex-direction: column;
     }
     .navigation {
+        width: 100%;
         padding: 0;
         border-bottom: 3px solid var(--third-color);
     }
@@ -435,21 +436,19 @@ input::placeholder {
     .link-navigation {
         display: flex;
         width: 100%;
+        padding: 0;
+        justify-content: space-evenly;
     }
     .link-navigation a {
-        padding-bottom: 30px;
-        margin: 0;
-        width: 100%;
-        text-align: center;
+        padding: 0 4em 1em;
     }
     .link-navigation a:hover {
         border-top: none;
         border-bottom: 3px var(--first-color) solid;
-        padding-top: 0;
     }
     /*** Main ***/
     .top-section {
-        padding: 0 15px;
+        padding: 0 1em;
     }
     .top-section h1 {
         margin-bottom: 10px;
@@ -457,7 +456,7 @@ input::placeholder {
     }
     /*** Search bar & Filter ***/
     .top-section .form {
-        margin: 20px 0;
+        margin: 1.2em 0;
         display: flex;
         justify-content: center;
     }
@@ -471,10 +470,13 @@ input::placeholder {
         width: 100%;
     }
     .filter button {
-        width: 40%;
+        width: 45%;
         padding: 0;
         margin: 10px 0;
         font-size: 0.8em;
+    }
+    .filter i {
+        font-size: 1.3em;
     }
     .tag {
         flex-wrap: wrap;
@@ -506,7 +508,7 @@ input::placeholder {
     }
     .title-left-section {
         width: 92%;
-        margin: 0;
+        margin: 0.5em 0;
     }
     .card-left-section {
         flex-direction: column;
@@ -526,6 +528,7 @@ input::placeholder {
     .right-section {
         width: 100%;
         border-radius: 0;
+        height: 0%;
     }
     .card-right-section {
         flex-direction: column;
@@ -533,7 +536,13 @@ input::placeholder {
     .card-popularity {
         width: 90%;
     }
+    .title-right-section {
+        margin: 0 0 0 1.5em;
+    }
     /*** Second Section ***/
+    .second-section {
+        padding: 1em;
+    }
     .second-section h2 {
         width: 50%;
         margin: 0;
@@ -542,6 +551,7 @@ input::placeholder {
     .activity-section {
         flex-direction: column;
         align-items: center;
+        padding-bottom: 2em;
     }
     .activity-section div {
         width: 100%;
@@ -556,17 +566,17 @@ input::placeholder {
     }
     /*** Footer ***/
     .footer {
-        flex-direction: column;
         height: auto;
         padding-bottom: 32px;
         width: 100%;
-        margin: 0;
+        margin: auto;
     }
     .link-footer {
         flex-direction: column;
-        margin-left: 20px;
+        margin-left: 2em;
+        width: 90%;
     }
-    .link-footer h3, li {
-        margin-left: 16px;
+    .link-footer li {
+        font-size: 0.9em;
     }
 }
